unreleased
==========

Optional non-dynamic operation mode for ALSA control plug-in
Optional extended controls for ALSA control plug-in

bluez-alsa v4.0.0 (2022-06-03)
==============================

- changes in command line options (no backward compatibility)
- implement D-Bus ObjectManager (deprecate org.bluealsa.Manger1)
- optional support for A2DP FastStream codec (music & voice)
- optional support for A2DP LC3plus codec (music & voice)
- enhanced SBC XQ mode (XQ+) which bumps bitrate to 595 kbps
- packet loss concealment (PLC) for HFP with mSBC codec
- enable/disable BT codecs via command line options
- allow to select BT transport codec with ALSA configuration
- allow to set PCM volume properties with ALSA configuration
- optional single-device mode for ALSA control plug-in
- export battery status/charge via BlueZ battery provider
- connection keep-alive timeout for all BT profiles
- better conformance with RTP specification for A2DP codecs
- fix for rapid consecutive SCO link close(2)/connect(2)
- bluealsa-aplay: forward PCM volume to ALSA mixer element
- systemd service files for bluealsa and bluealsa-aplay
- lots of fixes for ALSA PCM I/O and control plug-ins

bluez-alsa v3.1.0 (2021-06-01)
==============================

- higher PCM bit depth for apt-X HD (24-bit) and LDAC (32-bit)
- support for A2DP Sink with apt-X (HD) if decoder is available
- support for A2DP Sink with LDAC codec if decoder is available
- better audio volume scaling (Bluetooth volume as loudness)
- support TLV data for dB calculations in ALSA control plug-in
- fix PCM delay reporting from connected Bluetooth devices
- most recently connected Bluetooth device as a default PCM
- lots of improvements to the ALSA PCM I/O plug-in
- use rst2man (docutils) instead of pandoc to build man-pages
- bluealsa-cli: utility for using D-Bus API from command line
- bash completion script for installed applications

bluez-alsa v3.0.0 (2020-09-15)
==============================
