@@ -1,8 +1,9 @@
 unreleased
 ==========
 
-Optional non-dynamic operation mode for ALSA control plug-in
-Optional extended controls for ALSA control plug-in
+- persistent storage for PCM volume and mute state
+- optional non-dynamic operation mode for ALSA control plug-in
+- optional extended controls for ALSA control plug-in
 
 bluez-alsa v4.0.0 (2022-06-03)
 ==============================
